--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="services.html">Mes services</a></li>
+                <li><a href="services.html">Santé</a></li>
+                <li><a href="simracing.html">SimRacing</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
