--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Galy - Services</title>
+    <title>Lucas Galy - Santé</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,27 +11,30 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="services.html">Mes services</a></li>
+                <li><a href="services.html">Santé</a></li>
+                <li><a href="simracing.html">SimRacing</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <h1>Mes services</h1>
-        <p>Coaching, Sophrologie, Psychologie.</p>
-        <form action="mailto:lucasgaly.47510@gmail.com" method="post">
-            <label for="name">Nom :</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email :</label>
-            <input type="email" id="email" name="email" required>
-            <label for="service">Choisissez un service :</label>
-            <select id="service" name="service">
-                <option value="coaching">Coaching</option>
-                <option value="sophrologie">Sophrologie</option>
-                <option value="psychologie">Psychologie</option>
-            </select>
-            <button type="submit">Réserver</button>
-        </form>
+        <h1>Services Santé</h1>
+        <h2>Sophrologie</h2>
+        <p>✨ Prenez un moment pour vous… Respirez, recentrez-vous, et trouvez votre équilibre intérieur.</p>
+        <p>Je suis Lucas Galy, sophrologue passionné et engagé à vous accompagner vers un mieux-être au quotidien.</p>
+        <ul>
+            <li>Gérer votre stress et vos émotions</li>
+            <li>Améliorer votre sommeil</li>
+            <li>Retrouver confiance en vous</li>
+            <li>Préparation aux examens et compétitions</li>
+            <li>Optimiser vos performances sportives et mentales</li>
+        </ul>
+        <p>📍 Séances individuelles ou collectives, en présentiel ou en visio.</p>
+        <a href="contact.html">Réserver une séance</a>
+
+        <h2>Psychologie</h2>
+        <p>Accompagnement psychologique personnalisé selon vos besoins.</p>
+        <a href="contact.html">En savoir plus</a>
     </section>
 </body>
 </html>
