--- a/index.html
+++ b/index.html
@@ -18,40 +18,63 @@
         </nav>
     </header>
     
-    <section id="intro">
+    <section>
         <h1>Bienvenue sur mon site</h1>
         <p>Je suis Lucas Galy, psychologue, sophrologue, et coach. Découvrez mes services et contactez-moi pour un accompagnement personnalisé.</p>
     </section>
-    
+
+    <!-- Section Mes Services -->
     <section id="services">
         <h2>Mes Services</h2>
 
-        <!-- Services -->
         <div class="service-box">
             <h3>Sophrologie</h3>
-            <p>Bienvenue dans mon espace de sophrologie... <span class="show-more">Lire plus</span></p>
-            <div class="more-info">
-                <p>Je suis sophrologue et vous accompagne pour trouver votre équilibre intérieur. Que vous souhaitiez gérer votre stress, améliorer votre sommeil, ou optimiser vos performances sportives, je suis là pour vous guider avec des outils simples et efficaces.</p>
-            </div>
+            <p>Bienvenue dans mon espace de sophrologie ✨ Prenez un moment pour vous… Respirez, recentrez-vous, et trouvez votre équilibre intérieur.</p>
+            <p>Je suis [Votre Nom], sophrologue passionné(e) et engagé(e) à vous accompagner vers un mieux-être au quotidien. Je propose des séances adaptées à vos besoins, dans un cadre bienveillant et en toute confidentialité.</p>
+            <p>Que vous souhaitiez :</p>
+            <ul>
+                <li>✔️ Gérer votre stress et vos émotions</li>
+                <li>✔️ Améliorer votre sommeil</li>
+                <li>✔️ Retrouver confiance en vous</li>
+                <li>✔️ Vous préparer à un événement important (examens, compétitions, interventions médicales...)</li>
+                <li>✔️ Optimiser vos performances sportives et mentales</li>
+                <li>✔️ Apaiser l’hyperactivité et améliorer la concentration</li>
+                <li>✔️ Simplement prendre un temps pour vous reconnecter à votre corps et votre esprit</li>
+            </ul>
+            <p>Je suis là pour vous guider avec des outils simples et efficaces.</p>
+            <p>📍 Séances individuelles ou collectives, en présentiel ou en visio.</p>
+            <p>🌿 Prenez soin de vous dès aujourd’hui. Contactez-moi pour en savoir plus ou réserver une séance.</p>
         </div>
 
         <div class="service-box">
             <h3>Psychologie</h3>
-            <p>Bienvenue dans mon espace de psychologie... <span class="show-more">Lire plus</span></p>
-            <div class="more-info">
-                <p>Je vous accompagne à surmonter vos doutes et difficultés dans un cadre bienveillant et confidentiel. Si vous traversez des périodes de stress, d'anxiété, ou de remise en question, je suis là pour vous écouter et vous aider à avancer à votre rythme.</p>
-            </div>
+            <p>Bienvenue dans mon espace de psychologie ✨ Un accompagnement bienveillant pour vous aider à avancer.</p>
+            <p>Je suis Lucas Galy, psychologue à votre écoute pour vous aider à surmonter vos doutes et difficultés en toute confidentialité. Chaque personne traverse des moments de questionnement ou d’épreuves, et je suis là pour vous accompagner avec bienveillance et sans jugement.</p>
+            <p>Que vous traversiez :</p>
+            <ul>
+                <li>✔️ Stress, anxiété, angoisses</li>
+                <li>✔️ Manque de confiance en vous</li>
+                <li>✔️ Difficultés relationnelles ou professionnelles</li>
+                <li>✔️ Gestion des émotions</li>
+                <li>✔️ Périodes de transition ou de remise en question</li>
+                <li>✔️ Hyperactivité et troubles de l’attention</li>
+                <li>✔️ Préparation mentale pour des défis personnels ou professionnels</li>
+            </ul>
+            <p>Je vous propose un espace d’écoute et d’accompagnement personnalisé, adapté à vos besoins et à votre rythme.</p>
+            <p>📍 Séances en cabinet ou en visio, en toute confidentialité.</p>
+            <p>🌿 Vous n’êtes pas seul(e). Contactez-moi pour en savoir plus ou prendre rendez-vous.</p>
         </div>
 
         <div class="service-box">
             <h3>Simracing</h3>
-            <p>Découvrez mes services en Simracing... <span class="show-more">Lire plus</span></p>
+            <p>Découvrez mes services en Simracing… <span class="show-more">Lire plus</span></p>
             <div class="more-info">
                 <p>Je propose des sessions de coaching et d’accompagnement en Simracing pour améliorer vos performances, optimiser votre concentration et gérer votre stress avant une course importante.</p>
             </div>
         </div>
     </section>
 
+    <!-- Section Contact -->
     <section id="contact">
         <h2>Contactez-moi</h2>
         <form action="#" method="POST">
@@ -75,14 +98,4 @@
             <label for="message">Message</label>
             <textarea id="message" name="message" required></textarea>
 
-            <button type="submit">Envoyer</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Lucas Galy. Tous droits réservés.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+            <button type=
