--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <h1>Contact</h1>
         <p>Téléphone : 0620780119</p>
         <p>Email : lucasgaly.47510@gmail.com</p>
-        <form action="mailto:lucasgaly.47510@gmail.com" method="post">
+        <form action="submit_form.php" method="POST">
             <label for="lastname">Nom :</label>
             <input type="text" id="lastname" name="lastname" required>
             
